tests/src/snapshots/fe_compiler_tests__compile_errors__pow_with_signed_exponent.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: The right hand side of this operation must be unsigned
  ┌─ [snippet]:5:11
  │
5 │   base ** exp
  │           ^^^ incompatible signed numeric


